--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,15 @@ body {
         'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background: #f8f8f8;
+}
+
+.container {
+    background: #ffffff;
+
+    -webkit-box-shadow: 0px 5px 5px -6px rgba(5, 7, 7, 1) inset;
+    -moz-box-shadow: 0px 5px 5px -6px rgba(5, 7, 7, 1) inset;
+    box-shadow: 0px 5px 5px -6px rgba(5, 7, 7, 1) inset;
 }
 
 code {
