--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
         'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background: #f8f8f8;
+    background: rgb(242, 243, 247);
 }
 
 .container {
@@ -23,7 +23,7 @@ code {
 
 .content {
     min-height: calc(100vh - 70px - 64px);
-    padding: 1.5rem;
+    padding: 0.5rem;
 }
 
 .list {
@@ -206,8 +206,6 @@ frame {
         min-width: 100%;
     }
 }
-
-
 
 .close-menu {
     max-width: 2em; /* блок занимает ширину родителя, max-width её ограничивает */
