--- a/src/components/categoris_producer/catogoriesProducer.css
+++ b/src/components/categoris_producer/catogoriesProducer.css
@@ -102,4 +102,11 @@
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
