--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -34,6 +34,15 @@ nav {
     border: #921d25;
 }
 
+.enter-registration-label i {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 @media (max-width: 1090px) {
     .main-search {
         width: 50vw;
