УБРАЛ БЕЛЫЙ ЦВЕТ ЦЕНТРАЛЬНОЙ ЗОНЫ. Тестирую новый дизайн

--- a/src/components/categoris_producer/catogoriesProducer.css
+++ b/src/components/categoris_producer/catogoriesProducer.css
@@ -1,4 +1,6 @@
 .categories-producer-container {
+    background: white;
+
     border: 1px solid rgb(255, 255, 255);
     height: 14rem;
     left: 0;
