--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,11 @@ body {
 }
 
 .container {
-    background: #ffffff;
+    /* background: #ffffff; */
 
-    -webkit-box-shadow: 0px 5px 5px -6px rgba(5, 7, 7, 1) inset;
+    /* -webkit-box-shadow: 0px 5px 5px -6px rgba(5, 7, 7, 1) inset;
     -moz-box-shadow: 0px 5px 5px -6px rgba(5, 7, 7, 1) inset;
-    box-shadow: 0px 5px 5px -6px rgba(5, 7, 7, 1) inset;
+    box-shadow: 0px 5px 5px -6px rgba(5, 7, 7, 1) inset; */
 }
 
 code {
