--- a/src/components/categoris_producer/catogoriesProducer.css
+++ b/src/components/categoris_producer/catogoriesProducer.css
@@ -44,9 +44,9 @@
     box-shadow: none;
     border-radius: 10px;
 
-    /* border: 1px solid rgb(114, 128, 157); */
-
     margin-top: 0px;
+
+    transition: left 0.5s ease;
 }
 
 .card-image.image-category-producer {
@@ -111,4 +111,8 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+.visually-hidden {
+    visibility: hidden;
 }
