Скрыл на Хэдере ссылки на контакты и Эбоут, что бы они не сдвигали карусель

--- a/src/components/categoris_producer/catogoriesProducer.css
+++ b/src/components/categoris_producer/catogoriesProducer.css
@@ -28,6 +28,10 @@
     margin-bottom: 0px !important;
 }
 
+.carousel{
+    height: auto;
+}
+
 .categories-producer-block {
     white-space: nowrap;
     overflow: hidden;
