добавил левого марджина заголовкам блоков образцов и сертифицированных товаров

--- a/src/components/samples_container/samplesContainer.css
+++ b/src/components/samples_container/samplesContainer.css
@@ -1,12 +1,9 @@
 .samples-container {
     width: 50%;
 
-    /* border: 1px solid rgb(184, 184, 184); */
     border: 1px solid rgb(242, 241, 241);
     background-color: white;
     border-radius: 5px;
-
-    /* float: ; */
 
     margin: 2rem 5px 0 5px;
     padding: 5px;
@@ -15,16 +12,10 @@
 .sample-container {
     padding: 0;
 
-    /* margin: 2%; */
     width: 100%;
 }
 
 .card.sample-card {
-    /* width: 24%;
-    min-width: 100px;
-    float: left;
-    padding: 1%; */
-
     width: calc(
         25% - 2px
     ); /* Рассчитываем ширину каждой карточки, учитывая отступы между ними */
@@ -43,17 +34,16 @@
 .samples-container-title h6 {
     font-weight: 600;
     cursor: pointer;
+    margin-left: 15px;
 }
 
 .card.sample-card {
     box-shadow: none;
-    /* border: 1px solid rgb(242, 241, 241); */
     border-radius: 5px;
 
     margin: 2px;
 }
 .card-image.sample-image img {
-    /* border-radius: 5px 5px 0 0; */
     border-radius: 5px;
 }
 
