--- a/src/pages/Registration/registration.css
+++ b/src/pages/Registration/registration.css
@@ -1,55 +1,73 @@
 .registration-container {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  background-color: white;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.registration-container-title {
+    font-weight: 300;
+    margin-bottom: 1.5rem;
+    padding-bottom: 1rem;
+    border-bottom: 2px solid #ffe6ef;
 }
 
 .warning {
-  background-color: rgb(236, 64, 122);
-  color: white;
-  padding: 10px;
-  border-radius: 5px;
-  margin-bottom: 10px;
+    /* background-color: rgb(236, 64, 122); */
+    color: rgb(157, 157, 157);
+    /* padding: 10px; */
+    /* border-radius: 5px; */
+    margin-bottom: 1.5rem;
+    font-size: 13px;
+    line-height: 2rem;
+    /* border: 1px solid red; */
+
+    display: flex;
+    align-items: center;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
+.warning i {
+    margin-right: 8px; /* Добавляет немного отступа между иконкой и текстом */
+    color: #e65087;
 }
 
-label {
-  margin-bottom: 10px;
+.registration-form {
+    display: flex;
+    flex-direction: column;
 }
 
-input,
-select {
-  width: 100%;
-  padding: 8px;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  box-sizing: border-box;
-  border: 1px solid #ddd;
-  border-radius: 4px;
+.form-input {
+    width: 100%;
+    padding: 8px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    border-radius: 4px;
 }
 
-button {
-  background-color: rgb(236, 64, 122);
-  color: white;
-  padding: 10px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 16px;
+.submit-button {
+    background-color: rgb(236, 64, 122);
+    color: white;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
 }
 
-button:hover {
-  background-color: #d81b60;
+.submit-button:hover {
+    background-color: #d81b60;
 }
 
-a {
-  color: rgb(236, 64, 122);
+.agreement {
+    margin-top: 15px;
+    font-size: 14px;
+}
+
+.agreement a {
+    color: rgb(236, 64, 122);
 }
