--- a/src/pages/Registration/registration.css
+++ b/src/pages/Registration/registration.css
@@ -53,6 +53,7 @@
     background-color: rgb(236, 64, 122);
     color: white;
     padding: 10px;
+    margin-top: 2rem;
     border: none;
     border-radius: 4px;
     cursor: pointer;
