Страница Входа-Логин. Первая загрузка.

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -47,6 +47,9 @@ nav .brand-logo {
     cursor: pointer;
     color: white;
 }
+.enter-registration-link:active{
+color: #f8c8cb;
+}
 
 .main-search {
     width: 60vw;
