Подкорретировал высоту экрана. оправил расширение входа при достижении 420px

--- a/src/components/loginForm/loginForm.css
+++ b/src/components/loginForm/loginForm.css
@@ -113,3 +113,13 @@
 .hidden-visibility-icon {
     display: none;
 }
+
+@media (max-width: 420px) {
+    .login-form {
+        padding-left: 10%;
+        margin-left: -10%;
+
+        padding-right: 10%;
+        margin-right: -10%;
+    }
+}
