--- a/src/components/loginForm/loginForm.css
+++ b/src/components/loginForm/loginForm.css
@@ -13,98 +13,56 @@
     text-align: center;
 }
 
-.form-group {
-    margin-bottom: 20px;
-}
-
-.login-label {
-    color: #921d25;
-    font-weight: bold;
-}
-
-.login-input,
-.password-input {
-    /* width: calc(100% - 30px) !important; */
-    /* pa-left: 50px !important;
-    padding: 8px; */
-    /* margin-left: 40px !important; */
-    /* margin-top: 8px; */
-    /* border: 1px solid #ddd; */
-    /* border-radius: 4px; */
-    /* box-sizing: border-box; */
-}
-
 .form-group > i.used-input,
 .form-group > i.used-input {
-    /* display: flex;
-    align-items: center;
-    width: 20px; */
     color: rgb(38, 166, 154);
 }
 
-.password-input {
+.form-group.input-field.password-input-field {
     margin-bottom: 0;
 }
 
 .forgot-password {
-    /* margin-top: 10px; */
     text-align: right;
+    margin-bottom: 20px;
 }
 
-.forgot-password-link {
-    color: #3c3a7e;
+.forgot-password-link,
+.register-link-link {
+    color: #faae99;
+    font-weight: 400;
+}
+
+.register-link-link:hover,
+.forgot-password-link:hover {
+    color: rgb(250, 93, 145);
+    font-weight: 500;
+    text-decoration: underline;
+}
+.register-link-link:active,
+.forgot-password-link:active {
+    color: #faae99;
 }
 
 .login-button {
-    /* background-color: rgb(179, 195, 108); */
-    /* color: white; */
-    /* padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    width: 100%; */
+    width: 100%;
 }
 
-.login-button:hover {
-    /* background-color: rgb(212, 226, 150); */
-}
-
-.login-button:active {
-    /* background-color: rgb(179, 195, 108); */
-}
 .register-link {
     margin-top: 20px;
     text-align: center;
-    color: #4a4a4a;
-}
-
-.register-link a {
-    color: #7e3a66;
-    font-weight: 600;
-}
-.register-link a:hover {
-    color: #616097;
-}
-.register-link a:hover {
-    color: #3c3a7e;
-}
-
-.register-link a:hover {
-    text-decoration: underline;
 }
 
 .visibility-icon {
     color: #4a4a4a;
     cursor: pointer;
-    /* float: right; */
-    /* margin-top: -43px; */
+
     position: absolute;
     right: 10px;
     top: 10px;
 }
 .visibility-icon:hover {
-    color: #7c7c7c;
+    color: rgb(38, 166, 154);
 }
 .visibility-icon:active {
     color: #4a4a4a;
