--- a/src/components/header/narrowHeader.css
+++ b/src/components/header/narrowHeader.css
@@ -9,6 +9,18 @@ nav {
     display: flex;
     align-items: center;
     color: white;
+
+    justify-content: space-between;
+}
+
+.nh-small-logo,
+.nh-icons-area {
+    flex: 1; /* Равномерно распределяем пространство между левым и правым блоками */
+}
+
+.main-search {
+    flex: 2; /* Увеличиваем пространство центрального блока относительно левого и правого */
+    text-align: center; /* Выравниваем текст по центру */
 }
 
 .nh-icons-area {
@@ -16,7 +28,7 @@ nav {
     align-items: center;
     margin-left: auto; /* Прижимаем вправо */
     height: 100%; /* Добавьте высоту 100% */
-    margin-right: 20px;
+    /* margin-right: 0px; */
 }
 
 .nh-header-market-section {
@@ -38,41 +50,13 @@ nav {
     margin: 0; /* Сбросить отступы */
 }
 
-
-
-
 .main-search {
     width: 60vw;
     margin-left: auto;
     margin-right: auto;
 
     border: 2px solid;
-    border: #921d25;
-}
-
-.logo-container {
-    position: relative;
-    height: 140px;
-    padding-left: 3vw;
-    padding-top: 5px;
-}
-
-.brand-logo img {
-    height: 100px;
-}
-
-nav .brand-logo {
-    color: #ffffff;
-    line-height: 22px;
-}
-.slogan {
-    font-size: 14px;
-    padding-left: 15px;
-    letter-spacing: 2px;
-    font-weight: 500;
-    background: rgb(179, 195, 108);
-    width: 160px;
-    margin-top: 8px;
+    border: #d6d6d6;
 }
 
 @media (max-width: 1090px) {
