--- a/src/components/header/smallLogo.css
+++ b/src/components/header/smallLogo.css
@@ -1,9 +1,9 @@
 .nh-brand-logo {
     display: flex;
     align-items: center;
-    /* justify-content: space-around; */
-    width: 350px;
-    padding-left: 5vw;
+    width: 270px;
+    margin-left: 5vw;
+    margin-right: 1vw;
     text-decoration: none;
 }
 
@@ -33,7 +33,12 @@
     font-weight: 500;
     background: rgb(179, 195, 108);
     width: 80px;
-    /* margin-left: 8px; */
     transform: rotate(270deg);
     white-space: nowrap;
+}
+
+@media (max-width: 1160px) {
+    .nh-brand-logo {
+        margin-left: 0;
+    }
 }
