--- a/src/components/hoverCard/hoverCard.css
+++ b/src/components/hoverCard/hoverCard.css
@@ -10,9 +10,11 @@
 .hover-card {
     width: 300px;
     position: absolute;
-    /* background-color: #fff; */
-    background-color: rgb(255, 241, 247);
+    background-color: #fff;
+    /* background-color: rgb(255, 241, 247); */
     /* border: 3px solid rgb(179, 195, 108); */
+    border-top: 6px solid rgb(255, 136, 0);
+    border-bottom: 10px solid rgb(255, 136, 0);
     border-radius: 5px;
     color: rgb(99, 99, 99);
     padding: 20px 20px 50px 20px;
@@ -22,12 +24,10 @@
     box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.2);
 }
 
-/* Добавим стили для центрирования и выравнивания */
-.hover-card-centered {
-    /* top: 24px;
-    right: -50px; */
-    /* left: 50%; */
-    /* transform: translate(-50%, 0); */
+.hover-card-title {
+    font-weight: 500;
+    margin-top: 0;
+    color: black;
 }
 
 .btn-hover-user-card {
