Настроил вход-выход по регистрации и верификациям. в варианте без верификации

--- a/src/components/hoverCard/hoverProfileStyle.css
+++ b/src/components/hoverCard/hoverProfileStyle.css
@@ -21,7 +21,7 @@
 .hpc-last-spacer {
     height: 4px;
     border-radius: 2px;
-    background-color: #f1bfd2;
+    background-color: #ffe6ef;
 }
 
 .hpc-personal-data {
