--- a/src/components/hoverCard/hoverCard.css
+++ b/src/components/hoverCard/hoverCard.css
@@ -10,8 +10,13 @@
     /* background-color: rgb(255, 241, 247); */
     /* border: 3px solid rgb(179, 195, 108); */
 
-    border-top: 6px solid rgb(255, 136, 0);
+    /* border-top: 6px solid rgb(255, 136, 0);
     border-bottom: 10px solid rgb(255, 136, 0);
+     */
+    border-top: 6px solid #ff9dc1;
+    border-bottom: 10px solid #ff9dc1;
+    /* border-bottom: 10px solid #e65087; */
+
     border-radius: 5px;
 
     color: rgb(99, 99, 99);
