Разделы-компоненты личных данных, анимация выбора раздолов. Холдер пользователя на узком хедере. Переходы в разделы.

--- a/src/components/header/narrowHeader.css
+++ b/src/components/header/narrowHeader.css
@@ -48,6 +48,10 @@
     color: #ffffff;
 }
 
+.nh-icon-title-hovered {
+    color: #ffffff;
+}
+
 .nh-main-search {
     width: 60vw;
     margin-left: auto;
