--- a/src/pages/UserProfile/userProfile.css
+++ b/src/pages/UserProfile/userProfile.css
@@ -1,74 +1,112 @@
 .user-profile {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  background-color: #fff;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
-  color: #333;
+    color: #333;
 }
 
 .user-info {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .user-photo {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  margin-right: 20px;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-right: 20px;
 }
 
 .user-details {
-  flex-grow: 1;
+    flex-grow: 1;
 }
 
 .user-info-label {
-  display: block;
-  margin-bottom: 10px;
+    display: block;
+    margin-bottom: 10px;
 }
 
 .user-info-input {
-  width: 100%;
-  padding: 8px;
-  margin-top: 4px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
+    width: 100%;
+    padding: 8px;
+    margin-top: 4px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
 }
 
 .save-button,
 .edit-button {
-  display: block;
-  margin-top: 20px;
-  padding: 10px 15px;
-  font-size: 16px;
-  cursor: pointer;
-  border: none;
-  border-radius: 4px;
-  background-color: #4caf50;
-  color: #fff;
-  transition: background-color 0.3s;
+    display: block;
+    margin-top: 20px;
+    padding: 10px 15px;
+    font-size: 16px;
+    cursor: pointer;
+    border: none;
+    border-radius: 4px;
+    background-color: #4caf50;
+    color: #fff;
+    transition: background-color 0.3s;
 }
 
 .edit-button {
-  background-color: #2196f3;
+    background-color: #2196f3;
 }
 
 .save-button:disabled,
 .edit-button:disabled {
-  background-color: #ddd;
-  color: #666;
-  cursor: not-allowed;
+    background-color: #ddd;
+    color: #666;
+    cursor: not-allowed;
 }
 
 .save-button:hover,
 .edit-button:hover {
-  background-color: #45a049;
+    background-color: #45a049;
 }
 
+.up-user-interface-sections {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.up-section {
+    width: calc(
+        33.33% - 10px
+    ); /* 3 элемента в ряду с небольшим отступом между ними */
+    margin: 5px;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: #f0f0f0;
+    cursor: pointer;
+    transition: box-shadow 0.3s ease; /* анимация тени при наведении */
+
+    display: flex;
+    align-items: center;
+
+    justify-content: center; /* выравнивание текста по центру */
+    text-align: center;
+
+    font-size: 14px;
+}
+
+.up-section:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* тень при наведении */
+}
+
+.up-section-selected {
+    background-color: rgb(236, 64, 122);
+    color: #fff;
+}
+
+.up-section-message{
+  font-weight: 400;
+  margin: 20px;
+}
