upload some images on fifebase module

--- a/src/components/images_loader/images_loader.module.scss
+++ b/src/components/images_loader/images_loader.module.scss
@@ -1,3 +1,10 @@
 .container{
-    
+    background-color: white;
+    border-radius: 25px;
+    height: 75vh;
+    padding: 20px;
+//ровняем по центру весь контент ->
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
